--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -1,3 +1,96 @@
+:root {
+  --bs-primary: #e35e3b;
+}
+:root {
+  --brand-bg: #f0ede9;
+}
+
 * {
   box-sizing: border-box;
+}
+
+.box {
+  padding: 20px;
+  position: relative;
+}
+
+.space_box {
+  padding: 10px !important;
+}
+
+.text_center {
+  text-align: center;
+}
+
+.brand_bg {
+  background: var(--bs-primary);
+  color: #fff;
+}
+
+.radius {
+  border-radius: 0;
+  overflow: hidden;
+}
+
+.h-100 {
+  height: 100% !important;
+}
+
+.block {
+  display: block;
+}
+
+.equal_target {
+  height: 100%;
+}
+
+.pointer,
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.custom_plus {
+  background: #fff;
+  border-radius: 100%;
+  color: var(--bs-primary);
+  font-size: 20px;
+  height: 60px;
+  margin-bottom: 10px;
+  text-align: center;
+  padding-top: 20px;
+  width: 60px;
+}
+
+.fa {
+  display: inline-block;
+  font: normal normal normal 14px / 1 FontAwesome;
+  font-size: 20px !important;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.box_bg_white {
+  background: #fff !important;
+  border-radius: 0;
+  overflow: hidden;
+  word-break: break-word;
+}
+
+.ticket-number-box .ticket-number-box-count {
+  padding: 7px 0;
+}
+
+.brand_color {
+  color: var(--primary) !important;
+}
+
+.equal_target {
+  height: 100%;
+}
+
+h1,
+.h1 {
+  font-size: 36px !important;
+  line-height: 1.3 !important;
 }
