--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -1,96 +1,88 @@
-:root {
-  --bs-primary: #e35e3b;
-}
-:root {
-  --brand-bg: #f0ede9;
-}
+@import "./tickets-widgets.scss";
 
-* {
-  box-sizing: border-box;
-}
+.sdk-widget {
+  .block {
+    display: block;
+  }
 
-.box {
-  padding: 20px;
-  position: relative;
-}
+  .box {
+    padding: 20px;
+    position: relative;
+  }
 
-.space_box {
-  padding: 10px !important;
-}
+  a.box {
+    color: var(--dark, #495054);
+  }
 
-.text_center {
-  text-align: center;
-}
+  .space_box {
+    padding: 10px !important;
+  }
 
-.brand_bg {
-  background: var(--bs-primary);
-  color: #fff;
-}
+  .text_center {
+    text-align: center;
+  }
 
-.radius {
-  border-radius: 0;
-  overflow: hidden;
-}
+  .brand_bg {
+    background: var(--bs-primary, grey);
+    color: #fff;
+  }
 
-.h-100 {
-  height: 100% !important;
-}
+  .radius {
+    border-radius: 0;
+    overflow: hidden;
+  }
 
-.block {
-  display: block;
-}
+  .h-100 {
+    height: 100% !important;
+  }
 
-.equal_target {
-  height: 100%;
-}
+  .equal_target {
+    height: 100%;
+  }
 
-.pointer,
-.cursor-pointer {
-  cursor: pointer;
-}
+  .pointer,
+  .cursor-pointer {
+    cursor: pointer;
+  }
 
-.custom_plus {
-  background: #fff;
-  border-radius: 100%;
-  color: var(--bs-primary);
-  font-size: 20px;
-  height: 60px;
-  margin-bottom: 10px;
-  text-align: center;
-  padding-top: 20px;
-  width: 60px;
-}
+  .brand_color {
+    color: var(--bs-primary, grey) !important;
+  }
 
-.fa {
-  display: inline-block;
-  font: normal normal normal 14px / 1 FontAwesome;
-  font-size: 20px !important;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+  .box_bg_white {
+    background: #fff !important;
+    border-radius: 0;
+    overflow: hidden;
+    word-break: break-word;
+  }
 
-.box_bg_white {
-  background: #fff !important;
-  border-radius: 0;
-  overflow: hidden;
-  word-break: break-word;
-}
+  .equal_target {
+    height: 100%;
+  }
 
-.ticket-number-box .ticket-number-box-count {
-  padding: 7px 0;
-}
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  .h1,
+  .h2,
+  .h3,
+  .h4,
+  .h5,
+  .h6 {
+    font-family: var(--bs-font-sans-serif);
+  }
 
-.brand_color {
-  color: var(--primary) !important;
-}
+  h1,
+  .h1 {
+    font-size: 36px;
+    line-height: 1.3;
+  }
 
-.equal_target {
-  height: 100%;
-}
-
-h1,
-.h1 {
-  font-size: 36px !important;
-  line-height: 1.3 !important;
+  .m_auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
