--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -1,12 +1,16 @@
 @import "./tickets-widgets.scss";
 
 .sdk-widget {
-  .block {
-    display: block;
-  }
+  $white: #fff;
+
+  $box-padding: 20px;
+  $space-box-padding: 10px;
+
+  $h1-font-size: 36px;
+  $h1-line-height: 1.3;
 
   .box {
-    padding: 20px;
+    padding: $box-padding;
     position: relative;
   }
 
@@ -15,7 +19,7 @@
   }
 
   .space_box {
-    padding: 10px !important;
+    padding: $space-box-padding !important;
   }
 
   .text_center {
@@ -24,7 +28,7 @@
 
   .brand_bg {
     background: var(--bs-primary, grey);
-    color: #fff;
+    color: $white;
   }
 
   .radius {
@@ -50,7 +54,7 @@
   }
 
   .box_bg_white {
-    background: #fff !important;
+    background: $white !important;
     border-radius: 0;
     overflow: hidden;
     word-break: break-word;
@@ -77,8 +81,8 @@
 
   h1,
   .h1 {
-    font-size: 36px;
-    line-height: 1.3;
+    font-size: $h1-font-size;
+    line-height: $h1-line-height;
   }
 
   .m_auto {
