--- a/src/assets/stylesheets/tickets-widgets.scss
+++ b/src/assets/stylesheets/tickets-widgets.scss
@@ -1,6 +1,6 @@
 .sdk-tickets-widget {
   .custom_plus {
-    background: #fff;
+    background: $white;
     border-radius: 100%;
     color: var(--bs-primary, grey);
     font-size: 20px;
