--- a/src/assets/stylesheets/variables.scss
+++ b/src/assets/stylesheets/variables.scss
@@ -1,7 +1,27 @@
-$white: #fff;
-
 $box-padding: 20px;
 $space-box-padding: 10px;
 
 $h1-font-size: 36px;
 $h1-line-height: 1.3;
+
+$white: #fff !default;
+$gray-100: #f8f9fa !default;
+$gray-200: #e9ecef !default;
+$gray-300: #e2e2e2 !default;
+$gray-400: #ced4da !default;
+$gray-500: #adb5bd !default;
+$gray-600: #6c757d !default;
+$gray-700: #495057 !default;
+$gray-800: #343a40 !default;
+$gray-900: #212529 !default;
+$dark: #495054 !default;
+$black: #000 !default;
+
+$input-padding-y: 0.375rem !default;
+$input-padding-x: 0.75rem !default;
+$font-size-base: 1rem !default;
+$input-line-height: 1.5 !default;
+$input-color: $gray-700 !default;
+$input-bg: $white !default;
+$input-border-width: 2px !default;
+$input-border-color: $gray-300 !default;
