--- a/src/assets/stylesheets/tickets-widgets.scss
+++ b/src/assets/stylesheets/tickets-widgets.scss
@@ -49,7 +49,7 @@
     top: 12vh;
     width: 90vw;
     z-index: 10;
-    @media screen and (min-width: 992px) {
+    @media screen and (min-width: $xl-screen) {
       left: 10vw;
       width: 80vw;
     }
@@ -76,7 +76,7 @@
       &:first-child {
         margin-bottom: 1rem;
       }
-      @media screen and (min-width: 768px) {
+      @media screen and (min-width: $lg-screen) {
         margin-right: 0.5rem;
         width: auto;
         &:first-child {
@@ -102,7 +102,7 @@
     position: absolute;
     top: 0;
     width: 100%;
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: $lg-screen) {
       height: 75vh;
     }
     h2 {
@@ -139,7 +139,7 @@
     margin-bottom: 10px;
     min-width: auto;
     width: 100%;
-    @media screen and (min-width: 992px) {
+    @media screen and (min-width: $lg-screen) {
       min-width: 250px;
       width: auto;
     }
@@ -147,7 +147,7 @@
 
   .inline_form .form-control-wrapper {
     width: 100%;
-    @media screen and (min-width: 992px) {
+    @media screen and (min-width: $lg-screen) {
       width: 50%;
     }
   }
