--- a/src/assets/stylesheets/variables.scss
+++ b/src/assets/stylesheets/variables.scss
@@ -28,3 +28,7 @@ $input-color: $gray-700 !default;
 $input-bg: $white !default;
 $input-border-width: 2px !default;
 $input-border-color: $gray-300 !default;
+
+$tooltip-right: 0.34em;
+$tooltip-top: 0.75em;
+$tooltip-font-size: 16px;
