chore: chat page header styling

--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -1,6 +1,7 @@
 @import "./variables.scss";
 @import "./tickets-widgets.scss";
 @import "./ticket-list-widget.scss";
+@import "./chat-page.scss";
 
 .sdk-widget {
   .box {
