--- a/src/assets/stylesheets/variables.scss
+++ b/src/assets/stylesheets/variables.scss
@@ -1,5 +1,10 @@
-$xl-screen: 992px;
-$lg-screen: 768px;
+$breakpoint-xs: 0;
+$breakpoint-sm: 576px;
+$breakpoint-md: 768px;
+$breakpoint-lg: 992px;
+$breakpoint-xl: 1200px;
+
+$max-width: 1366px;
 
 $box-padding: 20px;
 $space-box-padding: 10px;
@@ -20,8 +25,12 @@ $gray-900: #212529 !default;
 $dark: #495054 !default;
 $black: #000 !default;
 
+$img-cover-color: #f7f6f4 !default;
+
+$com-date-color: #888 !default;
 $crm: #2b8c42;
 $brand: var(--bs-primary, grey);
+$brand-bg: #fff;
 
 $input-padding-y: 0.375rem !default;
 $input-padding-x: 0.75rem !default;
