--- a/src/assets/stylesheets/variables.scss
+++ b/src/assets/stylesheets/variables.scss
@@ -31,6 +31,7 @@ $com-date-color: #888 !default;
 $crm: #2b8c42;
 $brand: var(--bs-primary, grey);
 $brand-bg: #fff;
+$profil-btn-bg: #fff;
 
 $input-padding-y: 0.375rem !default;
 $input-padding-x: 0.75rem !default;
