--- a/src/assets/stylesheets/icons.scss
+++ b/src/assets/stylesheets/icons.scss
@@ -8,4 +8,32 @@
   [type="radio"]:checked + label.btn .fa:before {
     content: "\f192";
   }
+
+  /***** icon list *****/
+  ul.icon_list {
+    li {
+      list-style: none;
+      position: relative;
+      a {
+        display: block;
+        padding: 10px 50px 10px 60px;
+        &:hover {
+          background-color: rgba(240, 237, 233, 0.25);
+        }
+      }
+      img {
+        position: absolute;
+        left: 20px;
+        top: 18px;
+      }
+      .fa {
+        position: absolute;
+        right: 20px;
+        top: 25px;
+      }
+      small {
+        color: var(--dark);
+      }
+    }
+  }
 }
